# Kosevods

./: Cargo.toml  README.md
src/: combat_log_parser.rs  gui-main.rs  main.rs  obs_handler.rs
src/obs_handler/: combat_log_parser.rs
ui/: hello.slint  main.slint  settings.slint
