[package]
name = "kose_vods"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
obws = "0.9.1"
slint = "0.2.4"

[build-dependencies]
slint-build = "0.2.4"
